# zTournamentSorter

./: .gitignore  LoadTournamentTable.py  LoadTournamentTable_test.py  README.md  Tournament Sorter.cmd  Z-Ulimate Tournament.cmd  Z-UltimateTournament.py  requirements.txt
GUI/: listbox_log_handler.py
GoogleSheetReaderWriter/: AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
GoogleSheetReaderWriter/config/: config.example.yaml
GoogleSheetReaderWriter/data/: test_data.csv
GoogleSheetReaderWriter/docs/: guide-to-authentication.md  protected-ranges-and-orphaned-named-ranges-notes.md
GoogleSheetReaderWriter/gsheet_rw/: __init__.py  app.py  cli.py  config.py  registry.py  sheets_client.py
GoogleSheetReaderWriter/tests/: test_integration_sandbox.py  test_sheets_client_credentials.py
cleaninput/: __init__.py  cleaninput.py  input_errors.py  rename_colums.py
domain_model/: competitor_test.py  competitors.py  compettitor_test.py  constants.py  event.py  event_test.py  name_partitioner.py  rank.py  ring.py  ring_split.py  ring_split_test.py  ring_test.py
experimental/: definedf
experiments/: GenerateRandomNames.py  dataframe_from_S3_or_file.py  date_picker_integration_prompt.md  header_corrector.py  rename_colums.py  specifydatafileoncommandline.py  temperature_check.py  temperature_check_test.py  tk_screeen_info.py
reporting/: DivisionDetailReportPDF.py  KataScoreSheetPDF.py  PDFReportClass.py  testdataframe.py
reports/: DivisionDetailReportPDF.py  ExcelFileOutput.py  FileHandlingUtilities.py  KataScoreSheetPDF.py  division_detail_report.py  (+15 more)
(+64 files in other folders)
